--- a/src/scss/layout/_quotes.scss
+++ b/src/scss/layout/_quotes.scss
@@ -78,6 +78,7 @@
 					width: 100%;
 					padding: 10px 0;
 					margin-bottom: 10px;
+					left: 0;
 
 					.swiper-pagination-bullet {
 						margin: 0 5px;
