--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -1525,7 +1525,8 @@ footer {
         text-align: center;
         width: 100%;
         padding: 10px 0;
-        margin-bottom: 10px; }
+        margin-bottom: 10px;
+        left: 0; }
         .quotes .container .quote-mobile .swiper-pagination .swiper-pagination-bullet {
           margin: 0 5px; }
         .quotes .container .quote-mobile .swiper-pagination .swiper-pagination-bullet-active {
@@ -1586,15 +1587,6 @@ footer {
       position: relative; }
       .case .container .case-header ul.services:last-child {
         margin-right: 0; }
-      .case .container .case-header ul.services:after {
-        content: "";
-        width: 2px;
-        height: 100%;
-        background: #DCDCDC;
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0; }
       @media screen and (max-width: 480px) {
         .case .container .case-header ul.services {
           padding: 0 5% 0 0; } }
