--- a/src/scss/layout/_case.scss
+++ b/src/scss/layout/_case.scss
@@ -56,16 +56,16 @@
 				position: relative;
 
 				// Vertical line divider
-				&:after {
-					content: "";
-					width: 2px;
-					height: 100%;
-					background: $color-lightGrey;
-					position: absolute;
-					top: 0;
-					right: 0;
-					bottom: 0;
-				}
+				// &:after {
+				// 	content: "";
+				// 	width: 2px;
+				// 	height: 100%;
+				// 	background: $color-lightGrey;
+				// 	position: absolute;
+				// 	top: 0;
+				// 	right: 0;
+				// 	bottom: 0;
+				// }
 
 				@include media($mobile) {
 					padding: 0 5% 0 0;
