--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -4,7 +4,7 @@
 }
 
 a.highlight {
-    background-image: linear-gradient(180deg, transparent 65%, $color-primary 0);
+    background-image: linear-gradient(180deg, transparent 65%, $color-highlight 0);
     background-size: 0 100%;
     background-repeat: no-repeat;
     transition: all .4s ease;
@@ -19,13 +19,13 @@ a.highlight {
 }
 
 a.highlighted, span.highlighted {
-    background-image: linear-gradient(180deg, transparent 65%, $color-primary 0);
+    background-image: linear-gradient(180deg, transparent 65%, $color-highlight 0);
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
 
 a.link-small {
-    background-image: linear-gradient(180deg, transparent 75%, $color-primary 0);
+    background-image: linear-gradient(180deg, transparent 75%, $color-highlight 0);
     background-size: 0 100%;
     background-repeat: no-repeat;
     transition: all .2s ease;
