--- a/src/scss/helpers/_variables.scss
+++ b/src/scss/helpers/_variables.scss
@@ -1,6 +1,8 @@
 // Colours
 
-$color-primary			: 		#00FF89; 
+$color-primary			: 		#00FF89;
+// $color-primary			:		#ff5c5c;
+$color-highlight		:  		#fcf113;
 
 $color-black			:  		#262C30;
 $color-white			:  		#ffffff;
@@ -17,5 +19,5 @@ $color-medo				:  		#1aa9c7;
 
 // Fonts
 
-$font-primary			: 		'Source Sans Pro', sans-serif;
+$font-primary			: 		'Lato', sans-serif;
 $font-secondary			: 		'Source Serif Pro', serif;
