--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,6 +18,9 @@
 
 // Components
 @import 'components/buttons';
+@import 'components/iphone';
+@import 'components/watch';
+@import 'components/browser';
 
 // Layout
 @import 'layout/nav';
