--- a/src/scss/base/_defaults.scss
+++ b/src/scss/base/_defaults.scss
@@ -8,18 +8,13 @@ html, body {
 	height: 100%;
 }
 
-.padding-2 {
-	padding: 0 2%;
-}
-
 figure {
-	margin: 0 0 1.5em 0;
-	text-align: center;
+	margin: 0;
+	// text-align: center;
 
 	figcaption {
-		height: 100%;
 		margin-top: 2%;
-		padding-left: 5px;
+		// padding-left: 5px;
 		font-size: 14px;
 		font-style: italic;
 		color: $color-mediumGrey;
@@ -27,6 +22,9 @@ figure {
 		@include media($tablet) {
 			margin-top: 5%;
 		}
+	}
 
+	img {
+		width: 100%;
 	}
 }
