--- a/src/scss/layout/_case.scss
+++ b/src/scss/layout/_case.scss
@@ -1,462 +1,300 @@
 .case {
 	background: $color-white;
 	overflow: hidden;
+	margin: 0 auto;
+	padding-top: 0;
+
+	&.first-section {
+		padding-top: 5%;
+	}
 
 	.container {
+		padding-top: 3%;
+		padding-bottom: 3%;
 
-		// Top header section of each case study
-		.case-header {
-			// 8 cols wide in center
-			@include span-columns(10);
-			@include shift(1);
-			margin-bottom: 5%;
-			padding-bottom: 45px;
-			position: relative;
-
-			@include media($tablet) {
-				@include span-columns(12);
-				@include shift(0);
-			}
-
-			// Full with dark line
-			&:after {
-				content: "";
-				width: 100%;
-				height: 6px;
-				background: $color-darkGrey;
-				position: absolute;
-				left: 0;
-				right: 0;
-				bottom: 0;
-			}
-
-			ul {
-				padding: 0;
-				margin: 0;
-
-				li {
-					list-style: none;
-					padding-right: 5%;
-					color: $color-darkGrey;
-					font-family: $font-primary;
-					font-size: em(18);
-					line-height: 1.5;
-					font-style: italic;
-				}
-
-				& > .services-heading {
-					font-weight: 600;
-					color: $color-black;
-					margin-bottom: em(18);
-				}
-			}
-
-			ul.services {
-				@include span-columns(5 of 10);
-				position: relative;
-
-				// Vertical line divider
-				// &:after {
-				// 	content: "";
-				// 	width: 2px;
-				// 	height: 100%;
-				// 	background: $color-lightGrey;
-				// 	position: absolute;
-				// 	top: 0;
-				// 	right: 0;
-				// 	bottom: 0;
-				// }
-
-				@include media($mobile) {
-					padding: 0 5% 0 0;
-				}
-			}
-
-			.dates {
-				@include span-columns(5 of 10);
-
-				ul:first-child {
-					margin-bottom: 1.5em;
-				}
-
-				@include media($mobile) {
-					padding: 0 0 0 5%;
-				}
-			}
+		&.no-pad {
+			padding-top: 0;
+			margin-top: -1%;
 		}
 
-		// Main body copy
-		.body-copy {
-			// 6 col wide in center
-			@include span-columns(6);
-			@include omega;
-			@include shift(3);
-
-			// on tablet 12 col wide (full width)
-			@include media($tablet) {
-				@include span-columns(12);
-				@include shift(0);
-			}
-
-			// Case specific type styles
-
-			h1.heading {
-				display: inline-block;
-				margin-bottom: 0;
-
-				// For list directly after heading
-				+ ul li {
-					margin-top: 1.5em;
-				}
-
-				// For copy-figure4-4 directly after heading
-				+ .copy-figure4-4 {
-					margin-top: 1.5em;
-				}
-			}
-
-			// For headings within body-copy (not first)
-			h1.heading:not(:first-child) {
-				margin-top: 1.5em;
-			}
-
-			p {
-				margin: 1.5em 0;
-			}
-
-			em {
-				color: $color-black;
-			}
-
-			li {
-				margin: .5em 0;
-			}
-
-			blockquote {
-				@include span-columns(12 of 6);
-				@include shift(-3);
-				margin-top: 5%;
-				margin-bottom: 10%;
-				// float: none;
-
-				@include media($tablet) {
-					@include span-columns(12);
-					@include shift(0);
-					float: none;
-				}
-
-				p {
-					margin: .5em 0;
-				}
-			}
-
-			// Copy with image inline 4 cols each
-			.copy-figure4-4 {
-				@include span-columns(8 of 6);
-				@include shift(-1);
-				@include omega;
-
-				.copy p:first-child {
-					margin-top: 0;
-				}
-
-				
-				@include media($tablet) {
-					@include span-columns(6 of 6);
-					@include shift(0);
-				}
-
-				.copy {
-					@include span-columns(4 of 8);
-
-					@include media($tablet) {
-						@include span-columns(3 of 6);
-					}
-
-					@include media($mobile) {
-						@include span-columns(6 of 6);
-					}
-				}
-
-				figure {
-					@include span-columns(4 of 8);
-					// @include omega;
-					padding-top: 6px;
-
-					@include media($tablet) {
-						@include span-columns(3 of 6);
-					}
-
-					@include media($mobile) {
-						@include span-columns(6 of 6);
-						padding-top: 0;
-					}
-
-					img {
-						width: 100%;
-					}
-				}
-			}
-
-			// Two figure images side by side
-			.figure6-6 {
-				@include span-columns(12 of 6);
-				@include shift(-3);
-				margin-top: 5%;
-				margin-bottom: 5%;
-
-				@include media($tablet) {
-					@include span-columns(12 of 12);
-					@include shift(0);
-				}
-
-				figure {
-					@include span-columns(6 of 12);
-					@include omega(2n);
-
-					@include media($mobile) {
-						@include span-columns(12)
-					}
-
-					img {
-						width: 100%;
-					}
-				}
-			}
-
-
-			// Large 9 col image with 3 col caption to side
-			.figure9-3 {
-				@include span-columns(12 of 6);
-				@include shift(-3);
-
-				@include media($tablet) {
-					@include span-columns(12 of 12)
-					@include shift(0);
-				}
-
-				img {
-					@include span-columns(9 of 12);
-
-					@include media($mobile) {
-						@include span-columns(12);
-					}
-				} 
-
-				figcaption {
-					@include span-columns(3 of 12);
-					text-align: left;
-					position: relative;
-					margin-top: 0;
-					padding-top: 15px;
-					
-					&:before {
-						content: "";
-						position: absolute;
-						border-top: 1px solid $color-lightGrey;
-						top: 0;
-						left: 0;
-						width: 100%;
-
-						@include media($mobile) {
-							display: none;
-						}
-					}
-
-					@include media($mobile) {
-						@include span-columns(12);
-						text-align: center;
-					}
-
-				}
-
-				// Clear float on p after figure
-				+ p {
-					display: inline-block;
-					margin-bottom: 0;
-				}
-			}
+		p:last-child, ul {
+			margin-bottom: 0;
 		}
 
-		.iphone-section-wrapper {
-			@include span-columns(8);
-			@include shift(2);
-
-			@include media($tablet) {
-				@include span-columns(12);
-				@include shift(0);
-			}
-
-			.iphone-section {
-				text-align: center;
-				width: 100%;
-				margin: 5% 0;
-				
-				.iphone {
-					width: 100%;
-					position: relative;
-
-					.iphone-device {
-						width: 100%;
-					}
-
-					.iphone-screen {
-						position: absolute;
-						background: #272E3A;
-						width: 37.3%;
-						height: 67.6%;
-						top: 13.7%;
-						left: 31.7%;
-						overflow: visible;
-
-						img {
-							width: 100%;
-						}
-
-						.swiper-wrapper, .swiper-slide {
-							height: 100%;
-						}
-
-						.swiper-slide {
-							transform: scale(.8,.8);
-							opacity: 0.4;
-							transition: all 300ms ease;
-						}
-
-						.swiper-slide-active {
-							opacity: 1;
-							transform: scale(1,1);
-						}
-					}
-
-					.swiper-pagination, .swiper-pagination-2 {
-						position: relative;
-						width: 100%;
-						text-align: center;
-						padding: 10px 0;
-						margin-bottom: 10px;
-
-						.swiper-pagination-bullet {
-							margin: 0 5px;
-						}
-
-						.swiper-pagination-bullet-active {
-							background: $color-black;
-						}
-					}
-				}
-			}
+		@include media($mobile) {
+			padding: 10% 5%;
 		}
 	}
 
-	// Full bleed img outside container
-	.full-bleed {
-		width: 100%;
-		max-width: 1440px;
-		margin: 2% auto;
-
-		img {
-			width: 100%;
-		}
-	}
-
-	// Image contained within container (8 cols)
-	// Goes inside container, outside body-copy
-	.contained {
-		@include span-columns(8);
-		@include shift(2);
-		margin-top: 5%;
-		margin-bottom: 5%;
-		text-align: center;
-
-		img, iframe {
-			max-width: 100%;
-		}
+	// Top header section of each case study
+	.case-header {
+		// 10 cols wide in center
+		padding-bottom: 45px;
+		position: relative;
 
 		@include media($tablet) {
 			@include span-columns(12);
 			@include shift(0);
 		}
 
-		.swiper-pagination {
-			position: relative;
-			padding: 10px 0;
-			margin-bottom: 10px;
+		// Full with dark line
+		&:after {
+			content: "";
 			width: 100%;
+			height: 5px;
+			background: $color-black;
+			position: absolute;
+			left: 0;
+			right: 0;
+			bottom: 0;
+		}
 
-			.swiper-pagination-bullet {
-				margin: 0 5px;
+		ul {
+			padding: 0;
+			margin: 0;
+		}
+
+		.services {
+			@include span-columns(5 of 10);
+			position: relative;
+
+			@include media($mobile) {
+				@include span-columns(12 of 12);
+				@include omega;
+				margin-bottom: 30px;
+			}
+		}
+
+		.dates {
+			@include span-columns(5 of 10);
+
+			ul:first-child {
+				margin-bottom: 1.5em;
 			}
 
-			.swiper-pagination-bullet-active {
-				background: $color-black;
+			@include media($mobile) {
+				@include span-columns(12 of 12);
+				@include omega;
+				// margin-bottom: 20px;
 			}
 		}
 	}
 
-	.browser-section {
-		text-align: center;
-		width: 100%;
-		margin: 0 0 5% 0;
 
-		.browser {
-			width: 100%;
-			position: relative;
+	// Case styles
+	.ten {
+		@include span-columns(10);
+		@include shift(1);
 
-			.macbook {
-				width: 100%;
+		@include media($tablet) {
+			@include span-columns(12);
+			@include shift(0);
+		}
+	}
+
+	.aside-left {
+
+		.left {
+			@include span-columns(2 of 10);
+
+			@include media($tablet) {
+				@include span-columns(12)
+			}
+		}
+
+		.content {
+			@include span-columns(6 of 10);
+
+			p:first-child, ul {
+				margin-top: 0;
 			}
 
-			.browser-window {
-				position: absolute;
-				top: 13.9%;
-				left: 50%;
-				height: 72%;
-				width: 44.5%;
-				transform: translateX(-50.4%);
-				background: #fafafa;
-				border-radius: 2px;
-				overflow-y: scroll;
-				overflow-x: hidden;
+			iframe, img {
+				max-width: 100%;
+			}
 
-				img {
-					width: 100%;
+			figure {
+				margin: 2em 0;
+				text-align: center;
+
+				figcaption {
+					text-align: center;
 				}
 			}
+
+			@include media($tablet) {
+				@include span-columns(12)
+			}
+		}
+
+		.right {
+			@include span-columns(2 of 10);
 		}
 	}
 
-	.watch-section {
-		text-align: center;
-		width: 100%;
-		// margin: 5% 0;
+	.aside-img-right {
+		@include span-columns(11);
+		@include shift(1);
 
-		.watch {
-			width: 100%;
-			position: relative;
+		.left {
+			@include span-columns(2 of 11);
 
-			.apple-watch {
-				width: 100%;
+			@include media($tablet) {
+				@include span-columns(12)
+			}	
+		}
+
+		.content {
+			@include span-columns(5 of 11);
+
+			p:first-child, ul {
+				margin-top: 0;
 			}
 
-			.watch-window {
-				position: absolute;
-			    // top: 29.8%;
-			    top: 27.2%;
-			    // left: 49.5%;
-			    left: 48.7%;
-			    // height: 39.9%;
-			    height: 44.3%;
-			    // width: 19%;
-			    width: 30.3%;
-				// transform: translateX(-50.4%);
-				transform: translateX(-50%);
-				background: $color-black;
-				border-radius: 2px;
-				overflow: hidden;
+			iframe, img {
+				max-width: 100%;
+			}
 
-				img {
+			figure {
+				margin: 2em 0;
+
+				figcaption {
+					text-align: center;
+				}
+			}
+
+			@include media($tablet) {
+				@include span-columns(12)
+			}
+		}
+
+		.right {
+			@include span-columns(4 of 11);
+			padding-top: 9px;
+		}
+	}
+
+	.no-aside {
+
+		.content {
+			@include span-columns(6 of 10);
+			@include shift(2);
+
+			p:first-child, ul {
+				margin-top: 0;
+			}
+
+			iframe, img {
+				max-width: 100%;
+			}
+
+			figure {
+				margin: 2em 0;
+
+				figcaption {
+					text-align: center;
+				}
+			}
+
+			@include media($tablet) {
+				@include span-columns(12)
+				@include shift(0);
+			}
+		}
+	}
+
+	// Large 9 col image with 2 col caption to left
+	.figure-img {
+		@include span-columns(11);
+		@include shift(1);
+		position: relative;
+
+		@include media($tablet) {
+			@include span-columns(12);
+			@include shift(0);
+		}
+
+		figure {
+			@include media($mobile) {
+				display: flex;
+				flex-direction: column;
+			}
+
+			figcaption {
+				@include span-columns(2 of 11);
+				text-align: left;
+				margin-top: 0;
+
+				@include media($tablet) {
+					@include span-columns(3 of 12);
+				}
+
+				@include media($mobile) {
+					@include span-columns(12);
+					@include omega;
 					width: 100%;
+					order: 2;
+				}
+			}
+
+			img {
+				@include span-columns(9 of 11);
+
+				@include media($tablet) {
+					@include span-columns(9 of 12);
+				}
+
+				@include media($mobile) {
+					@include span-columns(12);
+					margin-bottom: 15px;
+					order: 1;
+				}
+			} 
+		}
+	}
+
+	.full {
+		@include span-columns(12);
+		float: none;
+		margin-left: auto;
+		margin-right: auto;
+
+		&.dark {
+			background: $color-blueGrey;
+			margin-top: 3%;
+			margin-bottom: 3%;
+
+			figcaption {
+				color: $color-darkGrey;
+			}
+
+			@include media($mobile) {
+				margin-top: 5%;
+				margin-bottom: 5%; 
+			}
+		}
+
+		figcaption {
+			text-align: center;
+		}
+
+		img {
+			width: 100%;
+		}
+	}
+
+	.two {
+
+		figure {
+			@include span-columns(6 of 12);
+			@include omega(2n);
+
+			@include media($mobile) {
+				@include span-columns(12);
+				@include omega(1n);
+
+				&:first-child {
+					margin-bottom: 5%;
 				}
 			}
 		}
