--- a/src/scss/layout/_nav.scss
+++ b/src/scss/layout/_nav.scss
@@ -15,18 +15,13 @@
 			height: 50px;
 			margin-top: 20px;
 
-			.logo {
-				fill: $color-black;
-			    background-image: linear-gradient(180deg, transparent 65%, $color-primary 0);
-			    background-size: 0 100%;
-			    background-repeat: no-repeat;
-			    transition: all .2s ease;
-
-				&:hover {
-					// fill: $color-primary;
-					background-size: 100% 100%;
-				}
-			}
+			// .logo {
+			// 	fill: $color-black;
+			//     background-image: linear-gradient(180deg, transparent 65%, $color-primary 0);
+			//     background-size: 0 100%;
+			//     background-repeat: no-repeat;
+			//     transition: all .2s ease;
+			// }
 		}
 
 		ul.nav-links {
@@ -40,7 +35,7 @@
 				display: inline-block;
 				margin-left: 60px;
 				font-size: 1em;
-				padding: 7.5px 0;
+				padding: 5px 0;
 
 				@include media($mobile) {
 					margin-left: 20px;
@@ -50,8 +45,29 @@
 					position: relative;
 					display: block;
 
-					&.active {
-				        background-size: 100% 100%;
+					&:after {
+						content: "";
+						position: absolute;
+						border-bottom: 2px solid transparent;
+						left: 0;
+						bottom: -5px;
+						width: 100%;
+						transition: all 300ms ease;
+					}
+
+					&:hover:after {
+						bottom: 0;
+						border-bottom: 2px solid $color-black;
+					}
+
+					&.active:after {
+						content: "";
+						position: absolute;
+				        bottom: 0;
+				        left: 0;
+				        width: 100%;
+						border-bottom: 2px solid $color-black;
+						transition: none;
 					}
 				}
 			}
