--- a/src/scss/layout/_work-header.scss
+++ b/src/scss/layout/_work-header.scss
@@ -1,5 +1,6 @@
 .work-header {
 	padding: 5% 0;
+	// background: $color-black;
 
 	&.home, &.work {
 		margin-top: 90px;
@@ -16,36 +17,18 @@
 				@include shift(0);
 			}
 
-			// #productDesignLink {
-			// 	position: relative;
-			// 	padding-right: 45px;
-			// 	display: inline-block;
+			#productDesignLink {
+				position: relative;
 
-			// 	@include media($mobile) {
-			// 		padding-right: 30px;
-			// 	}
-
-			// 	&:after {
-			// 		content: "*";
-			// 		position: absolute;
-			// 		height: 30px;
-			// 		width: 30px;
-			// 		right: 5px;
-			// 		top: 50%;
-			// 		transform: translateY(-40%);
-			// 		// background: url('../img/question-mark.svg') no-repeat;
-
-			// 		@include media($tablet) {
-			// 			height: 25px;
-			// 			width: 25px;
-			// 		}
-
-			// 		@include media($mobile) {
-			// 			height: 20px;
-			// 			width: 20px;
-			// 		}
-			// 	}
-			// }
+				&:after {
+					content: '';
+					position: absolute;
+					border-bottom: 2px solid $color-black;
+					left: 0;
+					bottom: 15%;
+					width: 100%;
+				}
+			}
 		}
 	}
 }
